<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editSalario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_salario"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:background="@color/white"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/opcao_40" />

        <RadioButton
            android:id="@+id/radio45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/opcao_45" />

        <RadioButton
            android:id="@+id/radio50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/opcao_50" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_calcular"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="16sp"
        android:visibility="gone"
        android:textColor="@color/white"/>

</LinearLayout>
